"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-08-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-19:
	  hacknet: fixed bug looking up a port that wasn't a port alias.
		Solution: search scope aliases for a port alias, b/c
		at least one MUST be a direct port-alias (hackish).
	  Added test cases for this fix.  
	  Next: need recursive definition of 'empty' subcircuits, 
		need to define a member flag.


2009-08-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-18:
	  lang/PRS.cc: added cerate-time check that subcircuits cannot
		be nested (yet), though this would be better at compile-time.
	  hacknet: internal node rules are now emitted in the subsubcircuit
		in which they are defined, thereby allowing named
		internal nodes to be passed around among local subcircuits.
		Completely re-worked subcircuit traversal and 
		internal node mapping data structures.  
	  Test cases added.


2009-08-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-17:
	  Added PRS::footprint support for tracking which subcircuits
		'own' which internal nodes (definitions).  
		Test cases (create) updated, new ones added.  
	  next: hacknet to use this information to emit internal rule
		subnets in the proper subcircuit.


	* HACKT-00-01-04-main-00-83-27-netlist-01-16:
	  hacknet: added Vdd and GND ports to subcircuits, only where used.
		stripped out spaces from template type names, e.g. "<3, 2>".
		Updated test cases, added a few new ones.
	  see also util/ChangeLog for string.cc lib addition, strgsub().
	  next: home scope of internal node definitions.


2009-08-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-15:
	  hacknet: implemented subcircuit definitions and instance, 