@@ -1,0 +1,24 @@
+// "array-01.hac"
+
+import "inv-01.hac";
+
+template <pint N>
+defproc delay(bool i, o) {
+[N == 0 ->
+	i = o;
+[] else ->
+inv k[N];
+bool x[N+1];
+x[0] = i;
+x[N] = o;
+(;j:N:
+	k[j](x[j], x[j+1]);
+)
+]
+}
+
+delay<0> z0;	// empty!
+delay<1> z1;
+delay<2> z2;
+delay<3> z3;
+
