@@ -1,0 +1,11 @@
+* subcircuit e1of2<> is empty.
+* subcircuit empty_1<> is empty.
+* subcircuit empty_2<> is empty.
+* subcircuit empty_3<> is empty.
+.subckt inv<> GND Vdd a b
+M0_ GND a b GND nch W=5u L=2u
+M1_ Vdd a b Vdd pch W=5u L=2u
+.ends
+
+xbar GND Vdd bar.a bar.b inv<>
+
