@@ -1,0 +1,15 @@
+// "empty-03.hac"
+// constructing a recursive empty definition!
+
+template <pint N>
+defproc recurse(bool a, b) {
+[N == 0 ->
+	a = b;
+[] else ->
+	bool x;
+	recurse<N-1> j(a, x), k(x, b);
+]
+}
+
+recurse<16> hell;
+
